# contextchecker

./: .gitignore  EVALUATION.md  autocheck._newpy.py  cli.py  fp_analysis.txt  import2.txt  import_profile.txt  import_profile2.txt  main.py  meteval.py  nextsteps.md  pyproject.toml  results_final.json  temp_analyze_fp.py  test_con.py  test_con_advanced.py
contextchecker/: __init__.py  checker.py  config.py  extractor.py  llmclient.py  pipeline.py  prompt_map.json  stats.py  utils.py
contextchecker/eval/: autocheck._newpy.py  autocheck.py  checkereval.py  extractoreval.py  metaeval.py  pipeline.py
data/noisy_context/: msmarco_alpaca_7B_answers.json  msmarco_chatgpt_answers.json  msmarco_claude2_answers.json  msmarco_davinci001_answers.json  msmarco_falcon_40B_instruct_answers.json  msmarco_gpt4_answers.json  msmarco_gpt4_answers_full.json  msmarco_llama2_70b_chat_answers.json
example/: content.json  example_in_ref.json  human_label.json  old_example.txt
results/: checked_msmarco_gpt4_answers_full.json  meta_msmarco_gpt4_ext-gemini_chk-gemini.json
src/: capability_matrix.json  checker.py  config.py  extractor.py  llmclient.py  prompt_map.json  schemas.py  utils.py
src/eval/: autocheck._newpy.py  autocheck.py  checkereval.py  metaeval.py
